# california-crop-yield-benchmark

./: .gitignore  LICENSE  README.md  out.out  pretrain.py  pyproject.toml  run.py  supervised_train.py
Download/: Down_data.ipynb
EDA/: CDL.ipynb  YieldObs.ipynb
Inference/: cultivar_cls.ipynb  inference.py  plot_inf.py  plot_prediction.ipynb  pred.ipynb
calicropyield/: loader.py  test.ipynb
dataset/: NoMatched.csv  YieldObs.ipynb  c.out  clip.py  countydatacreator.py  datalaoder.py  dataset_wrapper.py  out.out  output.csv  runner.py
dataset/EDA/: YieldObs.ipynb
dataset/download_county_dataset/: dcd.py  download_cdl_data.ipynb  download_climate_date.ipynb  download_et_data.ipynb  download_satellite_data.ipynb  download_soil_data.ipynb
dataset/generate_county_crop_dataset/: all.csv  ccdc.py  countydatacreator.py  crop_name_mapping.csv  data_creator.ipynb  out.out  soilprofile.txt  yield_observation_processing.ipynb
loss/: losses.py
mutilmodelvit/Inference/: inference.py  pred.ipynb
mutilmodelvit/src/: YieldB.py  dataLoader.py  engine.py
mutilmodelvit/utils/: misc.py  utils.py
src/: DataL.ipynb  SimCLRDataLoader.py  YieldB.py  attention.py  configs.py  cvt.py  dataLoader.py  losses.py  resnet_simclr.py
tutorial/: download_cdl.ipynb  download_climate.ipynb  download_et.ipynb  download_landsat.ipynb  download_soil.ipynb  download_usda.ipynb
utils/: misc.py  utils.py
