[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "calicropyield"
version = "0.1.0"
description = "A multi-modal data downloader and processing library for California crop yield benchmarking"
readme = "README.md"
requires-python = ">=3.8"
license = { file = "LICENSE" }
authors = [
  { name = "Hamid Kamangir", email = "hamid.kamangir@gmail.com" }
]
dependencies = [
  "rasterio",
  "geopandas",
  "shapely",
  "gdown",
  "numpy"
]

[project.urls]
Homepage = "https://github.com/plant-ai-biophysics-lab/california-crop-yield-benchmark"
Repository = "https://github.com/plant-ai-biophysics-lab/california-crop-yield-benchmark"